--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
 	"dependencies": {
 		"@emotion/core": "^10.0.7",
 		"@emotion/styled": "^10.0.7",
+		"babel-eslint": "^10.0.1",
+		"bluebird": "^3.5.3",
+		"eslint": "^5.14.1",
+		"eslint-plugin-babel": "^5.3.0",
+		"eslint-plugin-class-property": "^1.1.0",
+		"eslint-plugin-react": "^7.12.4",
 		"react": "^16.8.3",
 		"react-dom": "^16.8.3"
 	},
