--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
 	},
 	"extends": ["eslint:recommended", "plugin:react/recommended"],
 	"rules": {
-		"no-console": 0
+		"no-console": 0,
+		"react/prop-types": 0
 	}
 }
