Make a better custom component

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-	"plugins": ["react", "class-property", "babel"],
+	"plugins": ["react", "class-property", "babel", "react-hooks"],
 	"parser": "babel-eslint",
 	"parserOptions": {
 		"ecmaVersion": 6,
@@ -17,6 +17,9 @@
 	"extends": ["eslint:recommended", "plugin:react/recommended"],
 	"rules": {
 		"no-console": 0,
-		"react/prop-types": 0
+		"react/prop-types": 0,
+
+		"react-hooks/rules-of-hooks": "error",
+		"react-hooks/exhaustive-deps": "warn"
 	}
 }
