--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"eslint-plugin-babel": "^5.3.0",
 		"eslint-plugin-class-property": "^1.1.0",
 		"eslint-plugin-react": "^7.12.4",
+		"eslint-plugin-react-hooks": "^1.3.0",
 		"react": "^16.8.3",
 		"react-dom": "^16.8.3"
 	},
